--- a/app/src/main/res/layout/fragment_my_shows.xml
+++ b/app/src/main/res/layout/fragment_my_shows.xml
@@ -3,10 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp"
     tools:context="org.eecs499.russtrup.ketchup.MyShowsFragment">
-
 
     <com.melnykov.fab.ObservableScrollView
         android:id="@+id/myShowsScrollView"
@@ -22,8 +21,8 @@
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
             android:orientation="vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp" />
+            android:paddingBottom="3dp"
+            android:paddingTop="3dp" />
 
     </com.melnykov.fab.ObservableScrollView>
 
@@ -39,8 +38,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:src="@drawable/ic_plus"
-        fab:fab_colorNormal="@color/appAccent"
-        fab:fab_colorPressed="@color/appAccentDark"
+        fab:fab_colorNormal="@color/appAccentDark"
+        fab:fab_colorPressed="@color/appAccent"
         fab:fab_colorRipple="@color/appRed" />
 
     <ImageView
