--- a/app/src/main/res/layout/activity_show_info.xml
+++ b/app/src/main/res/layout/activity_show_info.xml
@@ -18,9 +18,9 @@
 
     <LinearLayout
         android:id="@+id/secondaryToolbarWrapper"
-        android:layout_below="@+id/toolbarWrapper"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbarWrapper"
         android:elevation="4dp">
 
         <!-- Secondary application toolbar-->
@@ -32,8 +32,9 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
-        android:layout_below="@id/secondaryToolbarWrapper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/secondaryToolbarWrapper"
+        android:background="#232323" />
 
 </RelativeLayout>
