--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,78 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/searchResultItem"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="88dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
-    android:background="#454545">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="3dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    card_view:cardBackgroundColor="#232323"
+    card_view:cardCornerRadius="3dp">
 
-    <FrameLayout
-        android:id="@+id/search_result_image_wrapper"
+    <RelativeLayout
+        android:id="@+id/searchResultItem"
         android:layout_width="fill_parent"
         android:layout_height="88dp"
-        android:orientation="vertical">
+        android:background="#454545">
 
-        <ImageView
-            android:id="@+id/search_result_image"
+        <FrameLayout
+            android:id="@+id/search_result_image_wrapper"
             android:layout_width="fill_parent"
+            android:layout_height="88dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/search_result_image"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:maxHeight="88dp"
+                android:scaleType="centerCrop" />
+        </FrameLayout>
+
+        <View
+            android:id="@+id/search_result_image_background"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:adjustViewBounds="true"
-            android:background="@color/cardview_dark_background"
-            android:maxHeight="88dp"
-            android:scaleType="centerCrop" />
-    </FrameLayout>
+            android:background="@color/imageTextBackground" />
 
-    <View
-        android:id="@+id/search_result_image_background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:background="@color/imageTextBackground" />
+        <TextView
+            android:id="@+id/showTitle"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/image_header_wrapper"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="Show Name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/showTitle"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/image_header_wrapper"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:ellipsize="marquee"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        android:singleLine="true"
-        android:text="Show Name"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        <ImageView
+            android:id="@+id/addShowBtn"
+            android:layout_width="48dp"
+            android:layout_height="80dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="#00676767"
+            android:contentDescription="Add Show"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_plus"
+            android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/addShowBtn"
-        android:layout_width="48dp"
-        android:layout_height="80dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:background="#00676767"
-        android:contentDescription="Add Show"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_plus"
-        android:visibility="gone" />
+        <ImageView
+            android:id="@+id/removeShowBtn"
+            android:layout_width="48dp"
+            android:layout_height="80dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="#00676767"
+            android:contentDescription="Remove Show"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_cancel"
+            android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/removeShowBtn"
-        android:layout_width="48dp"
-        android:layout_height="80dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:background="#00676767"
-        android:contentDescription="Remove Show"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_action_remove"
-        android:visibility="gone" />
-
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
