--- a/app/src/main/res/layout/fragment_find_shows.xml
+++ b/app/src/main/res/layout/fragment_find_shows.xml
@@ -1,9 +1,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
-    android:scrollbars="none"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:scrollbars="none">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,50 +16,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="Airing Today"
             android:textIsSelectable="false"
             android:textSize="25sp" />
 
         <HorizontalScrollView
-            android:id="@+id/horizontalScrollView"
+            android:id="@+id/todayShowsScroller"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/airingToday_subtitle">
 
             <LinearLayout
-                android:id="@+id/linearLayout"
+                android:id="@+id/todayShowsContainer"
                 android:layout_width="fill_parent"
                 android:layout_height="200dp"
-
                 android:layout_marginTop="20dp"
-                android:background="#565656"
+                android:background="#ababab"
                 android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#003399" />
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#990033" />
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#339900" />
-
-                <ImageView
-                    android:id="@+id/imageView8"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#993300" />
 
             </LinearLayout>
         </HorizontalScrollView>
@@ -69,48 +44,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/horizontalScrollView"
+            android:layout_below="@+id/todayShowsScroller"
             android:layout_marginTop="20dp"
             android:text="Most Popular"
             android:textSize="25sp" />
 
         <HorizontalScrollView
-            android:id="@+id/horizontalScrollView2"
+            android:id="@+id/popularShowsScroller"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView">
 
             <LinearLayout
+                android:id="@+id/popularShowsContainer"
                 android:layout_width="fill_parent"
                 android:layout_height="200dp"
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
-                android:background="#565656"
+                android:background="#ababab"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#330099" />
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#009999" />
-
-                <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#330033" />
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="128dp"
-                    android:layout_height="150dp"
-                    android:background="#990099" />
             </LinearLayout>
 
         </HorizontalScrollView>
