--- a/app/src/main/res/layout/fragment_show_info_header_condensed.xml
+++ b/app/src/main/res/layout/fragment_show_info_header_condensed.xml
@@ -32,7 +32,7 @@
         android:background="@color/imageTextBackground" />
 
     <TextView
-        android:id="@+id/showInfoShowName"
+        android:id="@+id/showTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/image_header_wrapper"
@@ -63,7 +63,7 @@
         android:layout_marginRight="16dp"
         android:text="Day @ Time"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_above="@+id/showInfoShowName"
+        android:layout_above="@+id/showTitle"
         android:layout_alignParentEnd="true"
         android:textSize="14sp" />
 
