--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/headerbg"
+        android:background="@color/appAccent"
         android:scaleType="centerCrop"/>
 
     <LinearLayout
