--- a/app/src/main/res/layout/fragment_popular_show_item.xml
+++ b/app/src/main/res/layout/fragment_popular_show_item.xml
@@ -47,7 +47,7 @@
             android:layout_marginRight="10dp"
             android:background="#00000000"
             android:src="@drawable/ic_plus"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
         <ImageButton
             android:id="@+id/findShowsUnsub"
